Add small changes in html

--- a/Website.html
+++ b/Website.html
@@ -37,6 +37,9 @@
             <div class="smtext">
                 This website has some subtext that goes here under the main title
             </div>
+            <div class="button">
+                Sign Up
+            </div>
         </div>
             <div class="midtop"></div>
             <div class="midbot"></div>
