Add picture folder and picture. Add more html and css code.

--- a/Website.html
+++ b/Website.html
@@ -31,19 +31,31 @@
                     </div>
                 </div>
             </div>
-            <div class="awtext">
-                This website is awesome
+            <div class="topleft">
+                <div class="awtext">
+                    This website is awesome
+                </div>
+                <div class="smtext">
+                    This website has some subtext that goes here under the main title
+                </div>
+                <div class="button1">
+                    <button class="button">Sign Up</button>
+                </div>
             </div>
-            <div class="smtext">
-                This website has some subtext that goes here under the main title
-            </div>
-            <div class="button">
-                Sign Up
+            <div class="picture">
+                <img src="Pictures/placeholder dog.jpg" alt="Little doggy">
             </div>
         </div>
-            <div class="midtop"></div>
-            <div class="midbot"></div>
-            <div class="bottom"></div>
+        <div class="midtop">
+            <div class="pictitle"></div>
+            <div class="linebox"></div>
+            <div class="subtext">
+                this is some subtext under an illustration or image
+            </div>
+        </div>
+
+        <div class="midbot"></div>
+        <div class="bottom"></div>
     </div>
 </body>
 
