Try to add boxes

--- a/Website.html
+++ b/Website.html
@@ -49,6 +49,10 @@
         <div class="midtop">
             <div class="pictitle"></div>
             <div class="linebox"></div>
+                <div class="bluebox"></div>
+                <div class="bluebox"></div>
+                <div class="bluebox"></div>
+                <div class="bluebox"></div>
             <div class="subtext">
                 this is some subtext under an illustration or image
             </div>
