Fix text allignment issue in top element

--- a/Website.html
+++ b/Website.html
@@ -31,28 +31,30 @@
                     </div>
                 </div>
             </div>
-            <div class="topleft">
-                <div class="awtext">
-                    This website is awesome
+            <div class="underheader">
+                <div class="topleft">
+                    <div class="awtext">
+                        This website is awesome
+                    </div>
+                    <div class="smtext">
+                        This website has some subtext that goes here under the main title
+                    </div>
+                    <div class="button1">
+                        <button class="button">Sign Up</button>
+                    </div>
                 </div>
-                <div class="smtext">
-                    This website has some subtext that goes here under the main title
+                <div class="picture">
+                    <img src="Pictures/placeholder dog.jpg" alt="Little doggy">
                 </div>
-                <div class="button1">
-                    <button class="button">Sign Up</button>
-                </div>
-            </div>
-            <div class="picture">
-                <img src="Pictures/placeholder dog.jpg" alt="Little doggy">
             </div>
         </div>
         <div class="midtop">
             <div class="pictitle"></div>
             <div class="linebox"></div>
-                <div class="bluebox"></div>
-                <div class="bluebox"></div>
-                <div class="bluebox"></div>
-                <div class="bluebox"></div>
+            <div class="bluebox"></div>
+            <div class="bluebox"></div>
+            <div class="bluebox"></div>
+            <div class="bluebox"></div>
             <div class="subtext">
                 this is some subtext under an illustration or image
             </div>
