Fix more alignment issues. Make further improvements toward end goal

--- a/Website.html
+++ b/Website.html
@@ -51,16 +51,28 @@
             </div>
         </div>
         <div class="midtop">
-            <div class="pictitle">
-                <div class="linebox"></div>
-                <div class="bluebox"></div>
-                <div class="bluebox"></div>
-                <div class="bluebox"></div>
-                <div class="bluebox"></div>
-                <div class="subtext">
-                    this is some subtext under an illustration or image
+            <div class="boxtitle"> Some random information.</div>
+                
+                <div class="linebox">
+                    <div class="bluebox"></div>
+                    <div class="bluebox"></div>
+                    <div class="bluebox"></div>
+                    <div class="bluebox"></div>
+                    <div class="subtext">
+                        this is some subtext under an illustration or image
+                    </div>
+                    <div class="subtext">
+                        this is some subtext under an illustration or image
+                    </div>
+                    <div class="subtext">
+                        this is some subtext under an illustration or image
+                    </div>
+                    <div class="subtext">
+                        this is some subtext under an illustration or image
+                    </div>
+
                 </div>
-            </div>
+            
         </div>
 
         <div class="midbot"></div>
