Add call to action box, finish quotebox

--- a/Website.html
+++ b/Website.html
@@ -46,37 +46,74 @@
                     </div>
                 </div>
                 <div class="picture">
-                    <img src="Pictures/placeholder dog.jpg" alt="Little doggy">
+                    <img class="dog" src="Pictures/placeholder dog.jpg" alt="Little doggy">
                 </div>
             </div>
         </div>
         <div class="midtop">
             <div class="boxtitle"> Some random information.</div>
-                
-                <div class="linebox">
-                    <div class="bluebox"></div>
-                    <div class="bluebox"></div>
-                    <div class="bluebox"></div>
-                    <div class="bluebox"></div>
-                    <div class="subtext">
-                        this is some subtext under an illustration or image
-                    </div>
-                    <div class="subtext">
-                        this is some subtext under an illustration or image
-                    </div>
-                    <div class="subtext">
-                        this is some subtext under an illustration or image
-                    </div>
-                    <div class="subtext">
-                        this is some subtext under an illustration or image
-                    </div>
 
+            <div class="linebox">
+                <div class="card">
+                    <div class="bluebox"></div>
+                    <div class="subtext">
+                        This is some subtext under an illustration or image
+                    </div>
                 </div>
-            
+                <div class="card">
+                    <div class="bluebox"></div>
+                    <div class="subtext">
+                        This is some subtext under an illustration or image
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="bluebox"></div>
+                    <div class="subtext">
+                        This is some subtext under an illustration or image
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="bluebox"></div>
+                    <div class="subtext">
+                        This is some subtext under an illustration or image
+                    </div>
+                </div>
+
+
+            </div>
+
+
+
         </div>
 
-        <div class="midbot"></div>
-        <div class="bottom"></div>
+        <div class="midbot">
+            <div class="quotebox">
+                <div class="quote">
+                    “We can only see a short distance ahead, 
+                    but we can see plenty there that 
+                    needs to be done.” 
+                </div>
+                <div class="quotee">
+                    - Alan Turing
+                </div>
+            </div>
+        </div>
+        <div class="bottom">
+            <div class="bbb">
+                <div class="textcard">
+                <div class="call">
+                    Call to action! It's time!
+                </div>
+                <div class="subcall">
+                    Sign up for our product by clicking
+                    that button right over there!
+                </div>
+            </div>
+            <div class="button2">
+                Sign up
+            </div>
+            </div>
+        </div>
     </div>
 </body>
 
