--- a/Website.html
+++ b/Website.html
@@ -114,6 +114,10 @@
             </div>
             </div>
         </div>
+
+        <div class="copyright">
+            Copyright &#169; The Odin Project 2024
+        </div>
     </div>
 </body>
 
